Back to good old Java 1.4